resources/testcases_static_checks/tests/negative/isRmfc/r12.rlsd
../../../tests_common_data/from-evaluation-section/r12.rls